# stock-prices

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
disclosures/: __init__.py  cli.py  diff.py  excel.py  fetch.py  models.py  parse.py  store.py  tickers.py
disclosures/fixtures/: ciec_details_mp.html
disclosures/sources/: __init__.py  base.py  ciec.py
examples/: explore.ipynb  portfolio.csv
stocks/: __init__.py  charts.py  cli.py  format.py  news.py  performance.py  prices.py  report.py
tests/: test_disclosures_diff.py  test_disclosures_parse.py  test_investment.py  test_performance.py  test_tickers.py
webapp/: __init__.py  app.py
webapp/static/: style.css
webapp/templates/: index.html
