[project]
name = "stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "python-dateutil>=2.9.0.post0",
    "tabulate>=0.10.0",
    "yfinance>=1.5.1",
]
