[project]
name = "stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "python-dateutil>=2.9.0.post0",
    "tabulate>=0.10.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
