[project]
name = "stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.5",
    "requests>=2.34.2",
    "tabulate>=0.10.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
